--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -140,26 +140,28 @@
         </div>
     </div>
     <div class="whyUseCircles greyPane">
-        <h1>Why use Openpay</h1>
         <div class="bodyContainer">
-            <div class="fourPanes">
-            <div class="col-3">
-                <div class="circle">
-                    +120% ATV Increase
+            <h1>Why use Openpay</h1>
+            <div class="bodyContainer">
+                <div class="fourPanes">
+                <div class="col-3">
+                    <div class="circle">
+                        +120% ATV Increase
+                    </div>
                 </div>
-            </div>
-            <div class="col-3">
-                <div class="circle">
-                    77% Repeat Cusomers
+                <div class="col-3">
+                    <div class="circle">
+                        77% Repeat Cusomers
+                    </div>
                 </div>
-            </div>
-            <div class="col-3">
-                <div class="tellMeMoreBtn">
-                    Tell me more
+                <div class="col-3">
+                    <div class="tellMeMoreBtn">
+                        Tell me more
+                    </div>
                 </div>
+                <div class="clear"></div>
             </div>
-            <div class="clear"></div>
-        </div>
+            </div>
         </div>
     </div>
     <div class="trustedLeaders">
