--- a/newDesign/help.html
+++ b/newDesign/help.html
@@ -72,9 +72,9 @@
         <div class="bodyContainer">
             <div class="heroInfo">
                 <h1>We're here for you.</h1>
-                <p>if you need some help, we're right here.</p>
-                <div class="btnBox"><a href="tel:1300168359">1300 168 359</a></div>
-                <div class="btnBox"><a href="mailto:info@openpay.com.au">info@openpay.com.au</a></div>
+                <p>Need help? we've got you. Check out our frequently asked questions or contact us directly below.</p>
+                <!--<div class="btnBox"><a href="tel:1300168359">1300 168 359</a></div>-->
+                <!--<div class="btnBox"><a href="mailto:info@openpay.com.au">info@openpay.com.au</a></div>-->
             </div>
         </div>
     </div>
@@ -82,66 +82,123 @@
     <div class="helpContent greyPane">
         <div class="bodyContainer">
             <h1>Frequently asked question</h1>
-            <p>Browse our categories to help answer the questions you have.</p>
-            <a href="#about">About Openpay</a><br>
-            <a href="#payment">Payment</a><br>
-            <a href="#returns">Returns</a><br>
+            <p>Browse our categories to help answer the questions you have.<img
+                    src="../../../Users/kfir_m/Downloads/helpHero.jpg"/></p>
+            <a href="#about">ABOUT OPENPAY</a><br>
+            <a href="#payment">PAYMENTS</a><br>
+            <a href="#returns">RETURNS</a><br>
             <br>
             <div class="section">
                 <a name="about"></a>
-                <h2>About Openpay</h2>
+                <h2>ABOUT OPENPAY</h2>
 
                 <div class="subSection">
-                    <h3>What is Openpay?</h3>
-                    <p>Openpay is a buy now pay later option that gives you back control. We’re not a credit card and we’re not here to get you into debt. We’re like a layby that lets you take home what you need today, and pay over time to help manage your cashflow and live your best life.</p>
+                    <h3>How do I sign up for Openpay?</h3>
+                    <p>Openpay is offered online at checkout, or you can visit one of our participating merchants in-store. Simply tell a staff member you want to use Openpay and you’ll be guided through the process. You can also sign up any time using our App.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
                 <div class="subSection">
-                    <h3>Why should I use Openpay?</h3>
-                    <p>Longer terms, flexible payment schedules and a sets us apart from the rest. Terms vary based on retailer, which means we don’t put unrealistic expectations on you to make your payments, and you can dictate when you start paying and how often you do so. Don’t fit yourself into a cookie cutter budgeting program, build your very own gingerbread house that fits in with your schedule.</p>
+                    <h3>What is required to use Openpay?</h3>
+                    <p>To sign up with Openpay you must:</p>
+                    <p>
+                        1. Be 18 years or older<br>
+                        2.Provide valid Australian ID (or New Zealand ID if a resident there)<br>
+                        3.Provide a valid email address and two contact phone numbers<br>
+                        4.Provide a valid Visa or MasterCard, both credit or debit cards are acceptable.<br>
+                    </p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
                 <div class="subSection">
-                    <h3>Can I use Openpay anywhere?</h3>
-                    <p>Not yet! Openpay is available at 4000 locations across a variety of industries in Australia, including retail, home improvement, automotive and health. Whether it be pet supplies, a car service, a dental fix, a home DIY job – there’s probably a merchant to suit what you need. And if not, be sure to mention it next time you’re instore paying for something that you’d rather use Openpay to pay off in your own time.</p>
+                    <h3>Are there any customer interest or customer fees associated with Openpay?</h3>
+                    <p>Openpay does not charge any interest. Depending on the plan type selected and the participating merchant in which you are shopping at, there may be no fees at all. In some instances a small plan management fee will be applicable to each repayment. This fee varies depending on the merchant in which the purchase is being made. In the case of higher value purchases an establishment fee may apply. This will be payable by approved applicants only in line with the initial payment. Once again all costs will be disclosed before you commit to your purchase.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
                 <div class="subSection">
                     <h3>Is Openpay a credit card?</h3>
-                    <p>Openpay is not a credit card! We’re like a layby that lets you take home today and pay off in manageable installments. This means you don’t need to have another credit card to apply. The only thing you’ll need is a Visa or Mastercard for your payments, as we do not offer direct debit.</p>
+                    <p>No. Openpay makes buy now, pay later, payment plans available. You do not need to hold and manage another credit or store card. You do however need an existing Visa or Mastercard to use Openpay.</p>
+                    <a onclick="topFunction()" href="#">Back to top</a>
+                </div>
+                <div class="subSection">
+                    <h3>Does Openpay perform a credit check?</h3>
+                    <p>Depending on the purchase you are making, you may be asked to consent to a credit check. In those instances, your consent will be clearly requested before a purchase is made.</p>
+                    <a onclick="topFunction()" href="#">Back to top</a>
+                </div>
+                <div class="subSection">
+                    <h3>Is my information secure with Openpay?</h3>
+                    <p>Yes, protecting your information is very important to us. Openpay is a Level 1 PCI DSS Compliant Provider. This means that all sensitive information is encrypted and we maintain stringent physical, electronic and procedural safeguards to protect your information. Our privacy policy is available on <a href="https://www.openpay.com.au/privacy-policy/" >this website</a>.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
             </div>
             <div class="section">
                 <a name="payment"></a>
-                <h2>Payment</h2>
+                <h2>PAYMENTS</h2>
 
                 <div class="subSection">
-                    <h3>How do I make a payment?</h3>
-                    <p>During checkout, you get to choose which date your payments will come out. When that day comes we will directly debit the money from your account. Want to get in early and make a payment before the due date? Go you good thing! You can do that in the app too.</p>
+                    <h3>How are payments made?</h3>
+                    <p>Payments are taken automatically as scheduled from your nominated credit or debit Visa or Mastercard. You can also make a payment early through the Openpay app.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
                 <div class="subSection">
                     <h3>How do I update my card details?</h3>
-                    <p>You guessed it – in the app! If you’d prefer speaking with a human, we have some nice ones you can telephone here at Openpay on 1300 168 359 during business hours (Monday to Friday, 9am-5pm AEST). If your card is lost or stolen, please update your details or get in touch to arrange a payment date that works. NOTE: Please never email us your card details or leave them on our messaging service. But do leave us a message with your name and contact details and a customer service member will get back to you.</p>
+                    <p>
+                        You can quickly and easily update your card details in the Openpay app. Alternatively, you can also update your payment details by calling 1300 168 359. Our business hours are Monday to Friday 9 a.m. – 5 p.m. AEST. You will also need to contact us if your card has been lost or stolen to update your card details.
+                        <br><b>Note: Please never email card details to us or leave these details on a messaging service. Simply leave your name and contact details and one of customer service members will be in touch.</b>
+                    </p>
+                    <a onclick="topFunction()" href="#">Back to top</a>
+                </div>
+                <div class="subSection">
+                    <h3>What if I need more time to make a payment?</h3>
+                    <p>Reach out to us on 1300 168 359 or via email to <a href="mailto:info@openpay.com.au">info@openpay.com.au</a> and we’ll see what we can do to assist.</p>
+                    <a onclick="topFunction()" href="#">Back to top</a>
+                </div>
+                <div class="subSection">
+                    <h3>How do I fix up a late payment or other payment related matter?</h3>
+                    <p>Our customer service team is here to assist with payments Monday to Friday 9 a.m. to 5 p.m. AEST. Please contact us by email <a href="mailto:info@openpay.comau">info@openpay.com.au</a> or phone 1300 168 359 for help on correcting a late payment or another payment related matter.</p>
+                    <a onclick="topFunction()" href="#">Back to top</a>
+                </div>
+                <div class="subSection">
+                    <h3>Can I make early payments?</h3>
+                    <p>Yes, early payments can be made quickly and easily in the Openpay app. You can also call our customer service team. The plan management fee will still be applicable. To pay off your entire plan, please contact our customer service team by email <a href="mailto:info@openpay.comau">info@openpay.comau</a> or phone 1300 168 359.</p>
+                    <a onclick="topFunction()" href="#">Back to top</a>
+                </div>
+                <div class="subSection">
+                    <h3>What merchant name will appear on my bank statement?</h3>
+                    <p>Regardless of the merchant in which you made the purchase, a reference to Openpay will appear on your bank or card statement.</p>
+                    <a onclick="topFunction()" href="#">Back to top</a>
+                </div>
+                <div class="subSection">
+                    <h3>Are there late fees?</h3>
+                    <p>If payments have not been made by their scheduled date, late fees will apply. Openpay sends out welcome emails on all purchases and payment reminder notices. Late fees are detailed in advance in this email correspondence. We understand that there are times when making a payment is just all too hard. Please contact us before the payment due date to reschedule and avoid late fees.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
             </div>
             <div class="section">
                 <a name="returns"></a>
-                <h2>Returns</h2>
+                <h2>RETURNS</h2>
 
                 <div class="subSection">
-                    <h3>Can I cancel my plan?</h3>
-                    <p>A plan is cancelled if you refund your purchase. Refunds are completely at the discretion of the retailer, so we go by whatever their returns policy is and will refund you accordingly, therefore cancelling your plan.</p>
+                    <h3>What if I want to return my purchase?</h3>
+                    <p>Full returns and partial refunds are available with Openpay. Please return goods to the merchant from which they were purchased and they will prepare a refund to you. All returns are subject to the merchant’s return policy.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
                 <div class="subSection">
-                    <h3>Can I close my Openpay account?</h3>
-                    <p>Sure, it’ll make us very sad and Emma our customer service manager sheds a tear every time it happens but you can close your account at any time. If you have no pending/active plans, just contact us via phone or email. It costs nothing to keep your account active; we’re here for when you need us.</p>
+                    <h3>How do refunds work?</h3>
+                    <p>Any amounts paid by you will be refunded back onto your nominated card and any future instalments will be cancelled or adjusted if necessary in the case of a partial refund. Plan management fees will not be refunded.</p>
+                    <a onclick="topFunction()" href="#">Back to top</a>
+                </div>
+                <div class="subSection">
+                    <h3>A merchant processed a refund, but I cannot see the funds in my account?</h3>
+                    <p>Openpay processes your refund immediately. As with all merchants, sometimes the bank may take a few days to clear the funds back into your account.</p>
                     <a onclick="topFunction()" href="#">Back to top</a>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="contactUs">
+        <div class="bodyContainer">
+            <h1>Frequently asked question</h1>
+            <p>Browse our categories to help answer the questions you have.</p>
+
         </div>
     </div>
 
