--- a/newDesign/how.html
+++ b/newDesign/how.html
@@ -69,18 +69,23 @@
 <div class="mainContent">
     <div class="heroHowContainer">
         <div class="greyWithOpacity"></div>
-        <div class="heroInfo">
-            <h1>Empowering you to pay.</h1>
-            <p>We are a buy now, pay later service with a difference. With longer terms across a variety of industries, we allow you to pay over time for the things you need and want.</p>
+        <div class="bodyContainer">
+            <div class="heroInfo">
+                <h1>Empowering you to pay.</h1>
+                <p>We are a buy now, pay later service with a difference. With longer terms across a variety of industries, we allow you to pay over time for the things you need and want.</p>
+            </div>
         </div>
     </div>
     <div class="intrigued">
-        <h1>So you're intrigued</h1>
-        <p>Start by downloading the app and signing up, you can sign up instore or during online checkout too.</p>
+        <div class="bodyContainer">
+            <h1>So you're intrigued</h1>
+            <p>Start by downloading the app and signing up, you can sign up instore or during online checkout too.</p>
+        </div>
     </div>
     <div class="howItWorks">
-        <h1>How Openpay works</h1>
-        <div class="twoPanes">
+        <div class="bodyContainer">
+            <h1>How Openpay works</h1>
+            <div class="twoPanes">
             <div class="col-2">
                 <ol class="list-group">
                     <li class="list-group-item completed">
@@ -114,9 +119,11 @@
             </div>
             <div class="clear"></div>
         </div>
+        </div>
     </div>
     <div class="everyStep">
-        <div class="twoPanes">
+        <div class="bodyContainer">
+            <div class="twoPanes">
             <div class="col-2 everyStepContent">
             <h1>Every step of the way.</h1>
             <p>
@@ -140,21 +147,24 @@
             </div>
             <div class="clear"></div>
         </div>
+        </div>
     </div>
     <div class="promotions">
-        <h1>Featured promotions</h1>
-        <div class="treeBanners">
-            <div class="col-3">
-                <img src="./images/edge-linen.png">
+        <div class="bodyContainer">
+            <h1>Featured promotions</h1>
+            <div class="treeBanners">
+                <div class="col-3">
+                    <img src="./images/edge-linen.png">
+                </div>
+                <div class="col-3">
+                    <img src="./images/Pet-house-halloween.png">
+                </div>
+                <div class="col-3">
+                    <img src="./images/Robins-halloween.png">
+                </div>
             </div>
-            <div class="col-3">
-                <img src="./images/Pet-house-halloween.png">
-            </div>
-            <div class="col-3">
-                <img src="./images/Robins-halloween.png">
-            </div>
+            <div class="clear"></div>
         </div>
-        <div class="clear"></div>
     </div>
     <div class="footer">
         <div class="footerMenu">
