--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -129,6 +129,7 @@
 			<div class="learnMoreWrapper">
 				<a class="button" href="how.html">Learn more</a>
 			</div>
+			<div class="clear"></div>
 		</div>
 		<div class="whereCanShop">
 			<h1>So where can I shop?</h1>
