add category name; sub category name; distance

--- a/newDesign/shop.retailer.html
+++ b/newDesign/shop.retailer.html
@@ -118,7 +118,7 @@
             <div class="featured-brand" id="featured-brand">
                 <h2 id="brand-name"></h2>
                 <p class="brand-info"><span id="locations-count">0</span> locations · <span id="availability"></span></p>
-                <p class="brand-category">Automotive · Auto - Car Servicing</p>
+                <p class="brand-category"><span id="category"></span> · <span id="subcategory"></span></p>
                 <iframe id="map" frameborder="0" style="border:0" src="" allowfullscreen class="map"></iframe>
                 <div class="brand-detailed-info">
                     <p class="brand-info">
