--- a/newDesign/au.terms.html
+++ b/newDesign/au.terms.html
@@ -94,7 +94,7 @@
 					3.2.2. Once the pre-authorisation is processed, we will then instruct your financial institution to cancel the pre-authorisation.</p>
 					<p>Note: No funds are taken from your account at pre-authorisation but a temporary ‘hold’ is placed on the funds. Once we have cancelled the pre-authorisation, it may take up to seven (7) days for your financial institution to release the funds and before you are able to access them.</p>
 					<p>&nbsp;</p>
-                </div>div class="subSection">
+                </div>
                 <div class="subSection">
                     <h3>4. Payment Obligations</h3>
                     <p>4.1. You must repay the amount of credit we provide in relation to each purchase we finance by making the instalments specified in the relevant Openpay Plan without set-off or deduction for any reason. You may make any instalment sooner than its due date.<br />
@@ -140,7 +140,7 @@
 					<p>&nbsp;</p>
 				</div>
 				<div class="subSection">
-                    <h3>>9. Your Openpay Plan</h3>
+                    <h3>9. Your Openpay Plan</h3>
                     <p>9.1. Subject to clause 1.4, you may draw down any Available Credit under this credit contract to finance future purchases with any of the current Openpay Participating Merchants. A current list of Participating Merchants is available on the website at www.openpay.com.au. An Establishment Fee may be payable when you enter into this credit contract and a Redraw Fee may be payable when you draw down any of the Available Credit under a second and each subsequent Openpay Plan forming part of this credit contract.<br />
 					9.2. This credit contract continues until the sooner of:<br />
 					9.2.1. termination by us upon your default under clause 6.2;<br />
@@ -228,26 +228,7 @@
 					In writing to: Australian Financial Complaints Authority, GPO Box 3, Melbourne VIC 3001</p>
 					<p>This document was last updated 31 October 2018.</p>
                 </div>
-            </div>
-                <a name="returns"></a>
-                <h2>RETURNS</h2>
-
-                <div class="subSection">
-                    <h3>What if I want to return my purchase?</h3>
-                    <p>Full returns and partial refunds are available with Openpay. Please return goods to the merchant from which they were purchased and they will prepare a refund to you. All returns are subject to the merchant’s return policy.</p>
-                    <a onclick="topFunction()" href="#">Back to top</a>
-                </div>
-                <div class="subSection">
-                    <h3>How do refunds work?</h3>
-                    <p>Any amounts paid by you will be refunded back onto your nominated card and any future instalments will be cancelled or adjusted if necessary in the case of a partial refund. Plan management fees will not be refunded.</p>
-                    <a onclick="topFunction()" href="#">Back to top</a>
-                </div>
-                <div class="subSection">
-                    <h3>A merchant processed a refund, but I cannot see the funds in my account?</h3>
-                    <p>Openpay processes your refund immediately. As with all merchants, sometimes the bank may take a few days to clear the funds back into your account.</p>
-                    <a onclick="topFunction()" href="#">Back to top</a>
-                </div>
-            </div>
+	</div>
         </div>
     </div>
   
