--- a/newDesign/au.terms.html
+++ b/newDesign/au.terms.html
@@ -219,7 +219,7 @@
 				<div class="subSection">
 					<p>If you have any questions, concerns or complaints about these Terms and Conditions, please contact our Customer Service team on:</p>
 					<p>Telephone: 1300 168 359</p>
-					<p>Email <a href="/cdn-cgi/l/email-protection#f990979f96b996899c97899880d79a9694d7988c"><strong><span class="__cf_email__" data-cfemail="41282f272e012e31242f3120386f222e2c6f2034">[email&#160;protected]</span></strong></a></p>
+					<p>Email<a href="info@openpay.com.au" target="_blank" rel="noopener"><strong>info@openpay.com.au</strong></a></p>
 					<p>We take all complaints seriously, and will respond to your complaint within a reasonable period.</p>
 					<p>If you are dissatisfied with the handling of your complaint, you can lodge a complaint with the Australian Financial Complaints Authority, or AFCA. AFCA provides fair and independent financial services complaint resolution that is free to consumers.</p>
 					<p>Website: <a href="https://www.afca.org.au/" target="_blank" rel="noopener">www.afca.org.au</a><br />
