--- a/newDesign/au.terms.html
+++ b/newDesign/au.terms.html
@@ -219,11 +219,11 @@
 				<div class="subSection">
 					<p>If you have any questions, concerns or complaints about these Terms and Conditions, please contact our Customer Service team on:</p>
 					<p>Telephone: 1300 168 359</p>
-					<p>Email<a href="info@openpay.com.au" target="_blank" rel="noopener"><strong>info@openpay.com.au</strong></a></p>
+					<p>Email: <a href="info@openpay.com.au" target="_blank" rel="noopener"><strong>info@openpay.com.au</strong></a></p>
 					<p>We take all complaints seriously, and will respond to your complaint within a reasonable period.</p>
 					<p>If you are dissatisfied with the handling of your complaint, you can lodge a complaint with the Australian Financial Complaints Authority, or AFCA. AFCA provides fair and independent financial services complaint resolution that is free to consumers.</p>
 					<p>Website: <a href="https://www.afca.org.au/" target="_blank" rel="noopener">www.afca.org.au</a><br />
-					Email: <a href="/cdn-cgi/l/email-protection#0c65626a634c6d6a6f6d22637e6b226d79"><span class="__cf_email__" data-cfemail="8fe6e1e9e0cfeee9eceea1e0fde8a1eefa">[email&#160;protected]</span></a><br />
+					Email: <a href=" info@afca.org.au" target="_blank" rel="noopener">info@afca.org.au</a><br />
 					Telephone: 1800 931 678 (free call)<br />
 					In writing to: Australian Financial Complaints Authority, GPO Box 3, Melbourne VIC 3001</p>
 					<p>This document was last updated 31 October 2018.</p>
