--- a/newDesign/nz.terms.html
+++ b/newDesign/nz.terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NZ Terms & Conditions2</title>
+    <title>NZ Terms & Conditions</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
     <script>
@@ -219,8 +219,8 @@ that any e-mail address you provide to us, be your personal e-mail address rathe
 					<p>This document was last updated 31 October 2018.</p>
                 </div>
 	</div>
-        </div>
-    </div>
+ 
+ 
   
     <div class="footer">
         <div class="footerMenu">
