--- a/newDesign/nz.terms.html
+++ b/newDesign/nz.terms.html
@@ -74,6 +74,8 @@
 <ol>
 <li><strong>Your agreement with us</strong>
 <ol>
+<ol>
+<ol>
 <li>By agreeing to enter this Deferred Payments Contract<br />
 in respect of any purchase (the “Contract”), you agree to pay Openpay Pty Ltd Pty Ltd ACN 159 699 126 of 40/120 Collins Street, Melbourne, Victoria 3000, Australia (“we”, “us”, “Openpay”) the instalments specified in the Openpay Deferred Payment Plan (the ” Plan”) contained in the store receipt that is issued to you in respect of that purchase.</li>
 <li>You agree to pay such instalments in consideration for Openpay paying the retailer the balance of the price for goods purchased by you from the retailer, and you agree to do so on these terms and conditions.</li>
@@ -83,6 +85,7 @@ in respect of any purchase (the “Contract”), you agree to pay Openpay Pty Lt
 <li>You must retain this Contract and your Plan as they represent your contract with Openpay.</li>
 </ol>
 </li>
+<ol>
 <li><strong>Your payment obligation</strong></li>
 <li>This Contract is free from interest and free from upfront or monthly fees.</li>
 <li>You must pay a 20% deposit on your nominated MasterCard or Visa debit or credit card (“Nominated Card”) in store before you take your purchases home. If the purchase price of your goods exceeds the aggregate purchase amount threshold imposed by Openpay (details of which can be found on our website – myopenpay.co.nz) (the “Openpay Transaction Limit”), you must pay a 20% deposit on the Openpay Transaction Limit plus the additional amount that exceeds the Openpay Transaction Limit.</li>
@@ -138,7 +141,9 @@ in respect of any purchase (the “Contract”), you agree to pay Openpay Pty Lt
 </li>
 </ul>
 <ul>
-<li><strong>Interpretation</strong>
+</ol>
+<li><strong>Interpretation</strong></li>
+</ul>
 <ol>
 <li>In this Contract, unless the context otherwise requires an expression that starts with capital letters has the meaning given to it in this Contract,.</li>
 <li>In this Contract, any reference to:
@@ -149,8 +154,7 @@ in respect of any purchase (the “Contract”), you agree to pay Openpay Pty Lt
 </ol>
 </li>
 </ol>
-</li>
-</ul>
+</li</li>
 <ul>
 <li><strong>Notices</strong>
 <ol>
