--- a/newDesign/business.html
+++ b/newDesign/business.html
@@ -224,11 +224,12 @@
     </div>
     <div class="footer">
         <div class="footerMenu">
-            <a href="help.html" class="footerNav">Help & Contact</a>
-            <a href="business.html" class="footerNav">For Merchants</a>
-            <a href="careers.html" class="footerNav">Careers</a>
-            <a href="blog.html" class="footerNav">Blog</a>
-        </div>
+				<a href="shop.html" class="footerNav">Shop now</a>
+				<a href="how.html" class="footerNav">how it works</a>
+				<a href="business.html" class="footerNav">I'm a business</a>
+				<a href="help.html" class="footerNav">Help & contact</a>
+				<a href="legal.html" class="footerNav">Legal stuff</a>
+			</div>
         <div class="socialLinks">
 				<span>
 					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
