Added basic legal header.

--- a/newDesign/legal.html
+++ b/newDesign/legal.html
@@ -67,19 +67,11 @@
     </div>
 </nav>
 <div class="mainContent">
-    <div class="heroHelpContainer">
-        <div class="greyWithOpacity"></div>
-        <div class="bodyContainer">
-            <div class="heroInfo">
-                <h1>Register</h1>
-            </div>
-        </div>
-    </div>
 
     <div class="helpContent greyPane">
         <div class="bodyContainer">
-            <h1>Join the movement</h1>
-            <p>Join the growing list of locations that are empowering previously<br>untapped audiences to live their lifestyle</p>
+            <h1>The Small Print Details</h1>
+            <p>Find all the important compliance stuff that governs our industry. <br>Get familar with it. Let us know if you have questions. </p>
         </div>
     </div>
 
