Select suburb option on shop page

--- a/newDesign/shop.html
+++ b/newDesign/shop.html
@@ -121,6 +121,7 @@
             </div>
             <div class="moreFilters">
                 <select class="city" id="city">
+                    <option value>Select Suburb</option>
                     <option value="Melbourne">Melbourne</option>
                     <option value="Sydney">Sydney</option>
                     <option value="Orange">Orange</option>
