Updated legal doc links in the footer, added tweaking. Prettify some code.

--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -294,12 +294,12 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
             </a>
         </div>
         <div class="footerMoreLinksMenu">
-            <a href="privacy.html" class="footerNav">Privacy</a>
-            <a href="terms.html" class="footerNav">Terms & Conditions</a>
-            <a href="userLicence.html" class="footerNav">User Licence</a>
-            <a href="PCI.html" class="footerNav">PCI Data Security</a>
+            <a href="legal.html" class="footerNav">Privacy</a>
+            <a href="legal.html" class="footerNav">Terms & Conditions</a>
+            <a href="legal.html" class="footerNav">User Licence</a>
+            <a href="legal.html" class="footerNav">PCI Data Security</a>
         </div>
-        <p>© Openpay &nbsp; | &nbsp; Made with <3 in Melbourne, Australia</p>
+        <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
         <a class="whiteLogo" href="/">
             <img src="./images/openpay_logo_white.svg">
         </a>
