--- a/newDesign/shop.brand.html
+++ b/newDesign/shop.brand.html
@@ -198,7 +198,7 @@
         <a href="userLicence.html" class="footerNav">User Licence</a>
         <a href="PCI.html" class="footerNav">PCI Data Security</a>
     </div>
-    <p>© Openpay &nbsp; | &nbsp; Made with <3 in Melbourne, Australia</p>
+    <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
     <a class="whiteLogo" href="/">
         <img src="./images/openpay_logo_white.svg">
     </a>
