Updated facebook link in footer to not be a mobile link.

--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -269,7 +269,7 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
         </div>
         <div class="socialLinks">
 				<span>
-					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+					<a href="https://facebook.com/openpayau" class="footer-icon fb">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
