--- a/newDesign/index.html
+++ b/newDesign/index.html
@@ -228,7 +228,7 @@
 			</div>
 			<div class="socialLinks">
 				<span>
-					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+					<a href="https://facebook.com/openpayau" class="footer-icon fb">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
