--- a/newDesign/au.terms-competition.html
+++ b/newDesign/au.terms-competition.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>au.terms-competition.html</title>
+    <title>PCI Data Security Statement</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84225706-1"></script>
     <script>
@@ -90,7 +90,7 @@
 			</div>
         <div class="socialLinks">
 				<span>
-					<a href="https://m.facebook.com/openpayau" class="footer-icon fb">
+					<a href="https://facebook.com/openpayau" class="footer-icon fb">
 						Facebook
 					</a>
 					<a href="https://twitter.com/openpay_" class="footer-icon twit">
