Legal policy content added.

--- a/newDesign/nz.terms.html
+++ b/newDesign/nz.terms.html
@@ -245,11 +245,10 @@
             </a>
             </div>
             <div class="footerMoreLinksMenu">
-                <a href="privacy.html" class="footerNav">Privacy</a>
-                <a href="au.terms.html" class="footerNav">AU Terms & Conditions</a>
-                <a href="nz.terms.html" class="footerNav">NZ Terms & Conditions</a>
-                <a href="userLicence.html" class="footerNav">User Licence</a>
-                <a href="PCI.html" class="footerNav">PCI Data Security</a>
+                <a href="legal.html" class="footerNav">Privacy</a>
+                <a href="legal.html" class="footerNav">Terms & Conditions</a>
+                <a href="legal.html" class="footerNav">User Licence</a>
+                <a href="legal.html" class="footerNav">PCI Data Security</a>
             </div>
             <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
             <a class="whiteLogo" href="/">
