--- a/newDesign/shop.retailer.html
+++ b/newDesign/shop.retailer.html
@@ -217,12 +217,12 @@
             <img class="android" src="./images/android.svg">
         </a>
     </div>
-    <div class="footerMoreLinksMenu">
-        <a href="privacy.html" class="footerNav">Privacy</a>
-        <a href="terms.html" class="footerNav">Terms & Conditions</a>
-        <a href="userLicence.html" class="footerNav">User Licence</a>
-        <a href="PCI.html" class="footerNav">PCI Data Security</a>
-    </div>
+            <div class="footerMoreLinksMenu">
+                <a href="legal.html" class="footerNav">Privacy</a>
+                <a href="legal.html" class="footerNav">Terms & Conditions</a>
+                <a href="legal.html" class="footerNav">User Licence</a>
+                <a href="legal.html" class="footerNav">PCI Data Security</a>
+            </div>
     <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
     <a class="whiteLogo" href="/">
         <img src="./images/openpay_logo_white.svg">
