better linking for the help/contact page.

--- a/newDesign/help.html
+++ b/newDesign/help.html
@@ -193,7 +193,9 @@
     </div>
     <div class="contactUs">
         <div class="bodyContainer">
+            <a name="contact"></a>
             <h1>Ways to contact us</h1>
+            <a name="contact"></a>
             <p>We're available Monday to Friday 9am to 5pm AEST</p>
             <div class="contactUsColContainer">
                 <div class="col-2">
