--- a/newDesign/legal.html
+++ b/newDesign/legal.html
@@ -71,7 +71,7 @@
     <div class="helpContent greyPane">
         <div class="bodyContainer">
             <h1>The Legal Stuff</h1>
-            <p>Find all the important compliance infomation that governs our industry and more. <br>Get familar with it. <a href="help.html"> Contact us</a> know if you have questions. </p>
+            <p>Find all the important compliance infomation that governs our industry and more. <br>Get familar with it. <a href="help.html#contact"> Contact us</a> know if you have questions. </p>
             <br>
             
         </div>
