--- a/newDesign/au.terms-competition.html
+++ b/newDesign/au.terms-competition.html
@@ -43,7 +43,7 @@
         <a href="shop.html">Shop now</a>
         <a href="how.html">How it works</a>
         <a href="business.html">I'm a business</a>
-        <a class="active" href="help.html">Help & contact</a>
+        <a href="help.html">Help & contact</a>
         <div class="topNavRight">
             <a href="https://retailer.myopenpay.com.au/live/Account/Login/">Merchant log in</a>
         </div>
@@ -60,7 +60,7 @@
                 <a href="shop.html"><li>Shop now</li></a>
                 <a href="how.html"><li>How it works</li></a>
                 <a href="business.html"><li>I'm a business</li></a>
-                <a class="active" href="help.html"><li>Help & contact</li></a>
+                <a href="help.html"><li>Help & contact</li></a>
                 <br>
                 <a href="https://retailer.myopenpay.com.au/live/Account/Login/"><li>Merchant log in</li></a>
             </ul>
