Fixed footer logo link going to root instead of the home index.

--- a/newDesign/bunnings.html
+++ b/newDesign/bunnings.html
@@ -300,7 +300,7 @@ Use Openpay at Bunnings to get the kitchen you really want. You can split the co
                 <a href="legal.html" class="footerNav">PCI Data Security</a>
             </div>
         <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-        <a class="whiteLogo" href="/">
+        <a class="whiteLogo" href="index.html">
             <img src="./images/openpay_logo_white.svg">
         </a>
 
