--- a/newDesign/shop.retailer.html
+++ b/newDesign/shop.retailer.html
@@ -224,7 +224,7 @@
                 <a href="legal.html" class="footerNav">PCI Data Security</a>
             </div>
     <p>© Openpay &nbsp; | &nbsp; Made in Melbourne, Australia</p>
-    <a class="whiteLogo" href="/">
+    <a class="whiteLogo" href="index.html">
         <img src="./images/openpay_logo_white.svg">
     </a>
 
